--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,9 +18,9 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  building A5,Songshanhu international community<br />
-		  Dongguan<br />
-		  Guangdong<br />
+		  Building A5, Songshanhu international community,<br />
+		  Dongguan,<br />
+		  Guangdong,<br />
 		  China<br />
 		</div>
 	  </div>
