--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
-      -
+      -大湾区大学科研启动经费<br />
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
