--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
 		<div class="col-sm-4">
 
 		  <p>&copy 2023 Zhang Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>.
+		  <p>We are grateful to <a href="https://github.com/mpa139/allanlab">Allen Lab</a> for generously sharing their template, which we have adopted for our personal page.
               <p>We are part of the <a href="https://www.gbu.edu.cn/menu/86/">College of Sciences</a> at <a href="https://www.gbu.edu.cn/">Great Bay University</a>.</p>
 
 
