--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
 		<div class="col-sm-4">
 		  Funding:<br />
       -大湾区大学科研启动经费<br />
+      -国家自然科学基金青年项目<br />
       -粤莞联合基金青年项目<br />
 		</div>
 		<div class="col-sm-4">
